[tool.poetry]
name = "varollbot"
version = "0.1.0"
description = ""
authors = ["Universal <sasha.ru.01@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.14.0"
black = "^23.1.0"
ruff = "^0.0.267"
gspread = "^5.12.0"
pandas = "^2.1.3"
oauth2client = "^4.1.3"
pytz = "^2023.3.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"





[tool.black]
line-length = 140

# [tool.ruff]
# select = [
#   # pyflakes
#   "F",
#   # flake8-annotations
#   "ANN",
#   # flake8-unused-arguments 
#   "ARG",
#   # pycodestyle
#   "E", "W",
#   # flake8-2020
#   "YTT",
#   # flake8-bugbear
#   "B",
#   # flake8-quotes
#   "Q",
#   # flake8-debugger
#   "T10",
#   # pylint
#   "PLC", "PLE", "PLR", "PLW",
#   # misc lints
#   "PIE",
#   # flake8-pyi
#   "PYI",
#   # tidy imports
#   "TID",
#   # implicit string concatenation
#   "ISC",
#   # type-checking imports
#   "TCH",
#   # comprehensions
#   "C4",
#   # pygrep-hooks
#   "PGH"
# ]
# ignore = []

# # Allow autofix for all enabled rules (when --fix) is provided.
# fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
# unfixable = []

# # Exclude a variety of commonly ignored directories.
# exclude = [
#     ".bzr",
#     ".direnv",
#     ".eggs",
#     ".git",
#     ".git-rewrite",
#     ".hg",
#     ".mypy_cache",
#     ".nox",
#     ".pants.d",
#     ".pytype",
#     ".ruff_cache",
#     ".svn",
#     ".tox",
#     ".venv",
#     "pypackages",
#     "_build",
#     "buck-out",
#     "build",
#     "dist",
#     "nodemodules",
#     "venv",
# ]

# #Same as Black.
# line-length = 140

# # Allow unused variables when underscore-prefixed.
# dummy-variable-rgx = "^(+|(+[a-zA-Z0-9]*[a-zA-Z0-9]+?))$"

# #Assume Python 3.10.
# target-version = "py310"

# [tool.ruff.mccabe]
# #Unlike Flake8, default to a complexity level of 10.
# max-complexity = 10

# [tool.pyright]
# reportGeneralTypeIssues = true

# [tool.pytest.ini_options]
# minversion = "6.0"
# addopts = "-ra -q"
# testpaths = ["src/tests"]
# xfail_strict = true
# filterwarnings = []